add gadget button index

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -30,7 +30,7 @@
         }
       })();
     </script>
-    
+
   </head>
   <body>
     <header>
@@ -47,6 +47,7 @@
         <a href="chip.html" target="_blank"><div class="doc chip"></div></a>
         <a href="pocketchip.html" target="_blank"><div class="doc pc"></div></a>
         <a href="dip.html" target="_blank"><div class="doc dip"></div></a>
+        <a href="gadget.html" target="_blank"><div class="doc gadget"></div></a>
       </div>
     </section>
   </body>
